<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/round_btn"
            android:textColor="@color/md_black_1000" />

        <ImageView
            android:id="@+id/draw"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_main" />


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/draw"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="20dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <com.rkonline.android.latobold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/font"
            android:textSize="27sp"
            />

        <com.rkonline.android.latonormal
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightfont"
            android:text="@string/enter_number"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:layout_marginTop="20dp"
            android:id="@+id/mobile"
            android:hint="@string/enter_mobile"
            android:inputType="number"
            android:textSize="13sp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:textSize="13sp"
            />


            <com.rkonline.android.latobold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/lightfont"
                android:gravity="right"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:id="@+id/forgot"
                android:text="@string/forgot"
                />


            <com.rkonline.android.latobold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/button"
            android:id="@+id/submit"
            android:textColor="#fff"
            android:gravity="center_horizontal"
            android:layout_marginTop="12sp"
            />

        <com.rkonline.android.latobold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightfont"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/create"
            android:text="@string/do_signup"
            />

    </LinearLayout>


    </RelativeLayout>


    </ScrollView>
   <!-- <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1,2"
        android:padding="8dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locale_english"
                android:text="@string/lang_en"
                android:background="@color/primary"
                android:textColor="@color/md_white_1000"
                android:layout_margin="1dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locale_hindi"
                android:text="@string/lang_hi"
                android:background="@color/primary"
                android:textColor="@color/md_white_1000"
                android:layout_margin="1dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locale_marathi"
                android:text="@string/lang_mr"
                android:background="@color/primary"
                android:textColor="@color/md_white_1000"
                android:layout_margin="1dp"/>
        </TableRow>

    </TableLayout>-->


</RelativeLayout>